force-app/main/default/objects/api_credential__mdt/api_credential__mdt.object-meta.xml
<CustomObject>
    <description>Credentials for accessing external apis.</description>
    <label>api credential</label>
    <pluralLabel>api credentials</pluralLabel>
</CustomObject>