force-app/main/default/objects/api_credential__mdt/fields/Access_Token_URL_Dev__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_URL_Dev__c</fullName>
    <label>Access Token URL Dev</label>
    <type>Url</type>
</CustomField>