force-app/main/default/objects/api_credential__mdt/fields/Client_Id_Dev__c.field-meta.xml
<CustomField>
    <fullName>Client_Id_Dev__c</fullName>
    <label>Client Id Dev</label>
    <type>TextArea</type>
</CustomField>