force-app/main/default/objects/api_credential__mdt/fields/Client_Secret_Dev__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret_Dev__c</fullName>
    <label>Client Secret Dev</label>
    <type>TextArea</type>
</CustomField>