force-app/main/default/objects/api_credential__mdt/fields/Final_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Final_Request_URL__c</fullName>
    <label>Final Request URL</label>
    <type>Url</type>
</CustomField>